{
    "name": "InputActions",
    "maps": [
        {
            "name": "Movement",
            "id": "a66f612b-bf88-4e6f-ac7a-2f64cb4e4d3c",
            "actions": [
                {
                    "name": "Walk",
                    "type": "Value",
                    "id": "3c15b542-9b54-44f6-bdf7-aac167076f66",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "a7d4625d-7d98-435f-9b30-a9668a50ec09",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "95488982-665d-42d7-b854-51d450e7fa85",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "85792ada-a950-4744-9a69-028b3a59fe98",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "58e7aef6-e544-4c56-86cd-7d1c84047163",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c758e24b-88c8-4977-a7a6-626c3c07f792",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8e5efed4-2da2-4212-b8ab-a743cc77f30d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3853181a-336c-458c-b28a-0e2e8c18ae83",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Aiming",
            "id": "37554ba5-a9fc-4063-aec4-c0b0af62aa23",
            "actions": [
                {
                    "name": "Aim",
                    "type": "Value",
                    "id": "b009765d-a36a-4e7c-af4c-e1cec612c07b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fcdf8259-b24b-44c1-8daf-2c61648d3e8d",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Actions",
            "id": "cb64f231-dd24-4b6f-9083-ae6be4a1f217",
            "actions": [
                {
                    "name": "PrimaryFire",
                    "type": "Button",
                    "id": "a0539075-45f4-4ba2-849d-fe22bb2d752e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryFire",
                    "type": "Button",
                    "id": "3ad72566-4991-40e5-9687-dfc4e9de196e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "4115a1c6-2275-4f80-bd26-bf01d6889b2b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GrabDrop",
                    "type": "Button",
                    "id": "fb4ee3b0-9473-4fcb-aca6-504a2ef640ed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "462fa787-45e0-435f-9c4c-7a3b8bf683b7",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17f6564b-380f-40d0-a4db-cc5f79eb7227",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b3bd298-849f-488c-bfdd-db2d211217d3",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c41b0ded-5e6c-4333-b4f7-11d2259a43d0",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GrabDrop",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Testing",
            "id": "66ec8014-4292-4caa-8d65-97f9a8ab52fe",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "50b22de5-586d-49d2-a909-f88c1d3e884f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "68348fe6-decf-494c-9aa6-04307b546da0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "adb563ac-6584-4e08-b166-f8df8462f07e",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7aa1d059-df4c-4986-a0d2-0a10a706eab7",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}